Update Global Street Food.ipynb
Removed local file path and expanded on a comment.

--- a/notebooks/Global Street Food.ipynb
+++ b/notebooks/Global Street Food.ipynb
@@ -38,9 +38,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#File Path Configuration\n",
-    "DATA_DIR = \"E:/DataAnalysis/Projects/Street Food/data\"\n",
-    "FIGURES_DIR = \"E:/DataAnalysis/Projects/Street Food/figures\"\n",
+    "#File Path Configuration (Change as needed)\n",
+    "DATA_DIR = \"/data\"\n",
+    "FIGURES_DIR = \"/figures\"\n",
     "\n",
     "\n",
     "#File Names\n",
